# psiperfil

./: .env  .gitignore  .pylintrc  LICENSE.md  Procfile  README.md  manage.py  psiperfil.sqlite3  pyproject.toml  requirements.txt
core/: admin.py  choices.py  forms.py  models.py  serializer.py  signals.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_formattention_created_at_formlearning_created_at_and_more.py  0002_formattention_formlearning_formpersonality_and_more.py  0003_alter_lgpdpermissions_bio_permission_and_more.py  0003_rename_questao6_formlearning_questao4_and_more.py  0004_alter_lgpdpermissions_bio_permission_and_more.py  0005_alter_lgpdpermissions_id.py
psiperfil/: asgi.py  settings.py  urls.py  wsgi.py
scripts/: server.py
staticfiles/: staticfiles.json
